--- a/course1_Introduction_to_Data_Science_in_Python(week_1).ipynb
+++ b/course1_Introduction_to_Data_Science_in_Python(week_1).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCfVi0UmBlBY4Wz8Fm2KUT",
+      "authorship_tag": "ABX9TyMgaZAkln58xkERE9b6M+WU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11503,7 +11503,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##slicing\n",
+        "###slicing\n",
         "\n",
         "It's important to realize that a slice of an array is a view into the same data. This is really important, this is called passing by reference. So, modifying the sub array will consequently modify the original array as well."
       ],
@@ -11607,6 +11607,15 @@
           "execution_count": 47
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## working with datasets"
+      ],
+      "metadata": {
+        "id": "6tcONAQaDQnm"
+      }
     },
     {
       "cell_type": "code",
