--- a/course1_Introduction_to_Data_Science_in_Python(week_1).ipynb
+++ b/course1_Introduction_to_Data_Science_in_Python(week_1).ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP1YIzd5isz7C3j8SCJ6ryF",
+      "authorship_tag": "ABX9TyOoZ4Q0+inzBz+OHo4lwnEN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1604,9 +1603,316 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "wines_data = np.genfromtxt(\"files/course1/winequality-red.csv\", delimiter=';', skip_header=True)"
+      ],
       "metadata": {
         "id": "9ij9ffT19bI-"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hHDjt3nWHdV-",
+        "outputId": "67a325d3-2f2e-4565-bd94-744b8a31faca"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 7.4  ,  0.7  ,  0.   , ...,  0.56 ,  9.4  ,  5.   ],\n",
+              "       [ 7.8  ,  0.88 ,  0.   , ...,  0.68 ,  9.8  ,  5.   ],\n",
+              "       [ 7.8  ,  0.76 ,  0.04 , ...,  0.65 ,  9.8  ,  5.   ],\n",
+              "       ...,\n",
+              "       [ 6.3  ,  0.51 ,  0.13 , ...,  0.75 , 11.   ,  6.   ],\n",
+              "       [ 5.9  ,  0.645,  0.12 , ...,  0.71 , 10.2  ,  5.   ],\n",
+              "       [ 6.   ,  0.31 ,  0.47 , ...,  0.66 , 11.   ,  6.   ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data[:, 0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "laXozjC6HiCT",
+        "outputId": "6901789e-000f-4e13-b3ed-2b56f7a228a9"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([7.4, 7.8, 7.8, ..., 6.3, 5.9, 6. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data[:, :1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z5BLjPOKHukb",
+        "outputId": "07b73f67-8460-4a40-c793-41245403574d"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[7.4],\n",
+              "       [7.8],\n",
+              "       [7.8],\n",
+              "       ...,\n",
+              "       [6.3],\n",
+              "       [5.9],\n",
+              "       [6. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sHz6Hn20HyzY",
+        "outputId": "38deb431-a9d6-46e6-efe4-1c7fc7a315cb"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 7.4  ,  0.7  ,  0.   , ...,  0.56 ,  9.4  ,  5.   ],\n",
+              "       [ 7.8  ,  0.88 ,  0.   , ...,  0.68 ,  9.8  ,  5.   ],\n",
+              "       [ 7.8  ,  0.76 ,  0.04 , ...,  0.65 ,  9.8  ,  5.   ],\n",
+              "       ...,\n",
+              "       [ 6.3  ,  0.51 ,  0.13 , ...,  0.75 , 11.   ,  6.   ],\n",
+              "       [ 5.9  ,  0.645,  0.12 , ...,  0.71 , 10.2  ,  5.   ],\n",
+              "       [ 6.   ,  0.31 ,  0.47 , ...,  0.66 , 11.   ,  6.   ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data[:, [0, -1]]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bPny_KOwUcVC",
+        "outputId": "7224b09f-ed3e-4ba7-f3db-9848868212bb"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[7.4, 5. ],\n",
+              "       [7.8, 5. ],\n",
+              "       [7.8, 5. ],\n",
+              "       ...,\n",
+              "       [6.3, 6. ],\n",
+              "       [5.9, 5. ],\n",
+              "       [6. , 6. ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quality = wines_data[:, -1]\n",
+        "\n",
+        "quality"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "msLVv8DMUh51",
+        "outputId": "d7cfd1d2-c0c7-49c2-8f54-6e59e7101fdd"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5., 5., 5., ..., 6., 5., 6.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q_mean = quality.mean()\n",
+        "\n",
+        "q_mean"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dgl_yRzWU4RU",
+        "outputId": "731f8601-25db-4c76-9586-cec95dc67200"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.6360225140712945"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quality2 = wines_data[:, -1:]\n",
+        "\n",
+        "quality2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ImrqXppU20E",
+        "outputId": "4c1205f3-bb9a-4a17-f76c-3a66c185b8f8"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5.],\n",
+              "       [5.],\n",
+              "       [5.],\n",
+              "       ...,\n",
+              "       [6.],\n",
+              "       [5.],\n",
+              "       [6.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quality2.mean() == q_mean"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j3pJxyOAVNYw",
+        "outputId": "e4c428cd-570b-4487-fe1e-91a908880a41"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wines_data.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZxRajADUVkMC",
+        "outputId": "13620367-539a-4181-c20e-1c955022c499"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q9wWXdQJWbNT"
       },
       "execution_count": null,
       "outputs": []
